testsuite/bsc.typechecker/display/NotDisplayable.bs.bsc-out.expected
checking package dependencies
compiling NotDisplayable.bs
Error: "NotDisplayable.bs", line 6, column 14: (T0031)
  The contexts for this expression could not be resolved because there are no
  instances of the form:
    Prelude.Bits NotDisplayable.Test a__
