testsuite/bsc.typechecker/display/NotDisplayable.bs
package NotDisplayable() where

data Test = A | B

foo :: Action
foo = $display A 